[project]
name = "dhparkeren"
version = "0.1.1"
description = "The Hague Visitor Parking API"
authors = [
    {name = "sir-Unknown",email = "sir-Unknown@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "datetime (>=5.5,<6.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[tool.poetry]
packages = [{include = "dhparkeren", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
